<resources>
    <string name="app_name">FindSpy</string>
    <string name="findSpy" translatable="false">Find Spy</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="one" translatable="false">1</string>
    <string name="player">Player</string>
    <string name="spy">Spy</string>
    <string name="start">START</string>
    <string name="places">Places</string>
    <string name="foods">Foods &amp; Drinks</string>
    <string name="things">Things</string>
    <string name="place">Place</string>
    <string name="thing">Thing</string>
    <string name="food">Food &amp; Drink</string>
    <string name="cities">Cities &amp; Countries</string>
    <string name="role">Tap to show your role</string>
    <string name="hide">tap to hide</string>
    <string name="space">&#160;</string>
    <string name="finish">Finish!</string>
    <string name="joker">Joker</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="time">Time</string>
    <string name="exitMassage">Do you want to exit?</string>
    <string name="exit">EXIT</string>

    <string-array name="places">
        <item name="restaurant">@string/restaurant</item>
        <item name="gym">@string/gym</item>
        <item name="airport">@string/airport</item>
        <item name="supermarket">@string/supermarket</item>
        <item name="school">@string/school</item>
        <item name="university">@string/university</item>
        <item name="bank">@string/bank</item>
        <item name="cinema">@string/cinema</item>
        <item name="library">@string/library</item>
        <item name="busStop">@string/busStop</item>
        <item name="postOffice">@string/postOffice</item>
        <item name="cafe">@string/cafe</item>
        <item name="hospital">@string/hospital</item>
        <item name="hotel">@string/hotel</item>
        <item name="museum">@string/museum</item>
        <item name="park">@string/park</item>
        <item name="zoo">@string/zoo</item>
        <item name="house">@string/house</item>
        <item name="parking">@string/parking</item>
        <item name="fireStation">@string/fireStation</item>
        <item name="sea">@string/sea</item>
        <item name="factory">@string/factory</item>
        <item name="jail">@string/jail</item>
        <item name="drugStore">@string/drugStore</item>
    </string-array>

    <string name="restaurant">Restaurant &#127860;</string>
    <string name="gym">Gym &#9917;</string>
    <string name="airport">Airport &#9992;</string>
    <string name="supermarket">Supermarket &#127853;</string>
    <string name="school">School &#128212;</string>
    <string name="university">University &#127891;</string>
    <string name="bank">Bank &#128176;</string>
    <string name="cinema">Cinema &#127909;</string>
    <string name="library">Library &#128218;</string>
    <string name="busStop">Bus Stop &#128655;</string>
    <string name="postOffice">Post Office &#128234;</string>
    <string name="cafe">Cafe\' &#9749;</string>
    <string name="hospital">Hospital &#127973;</string>
    <string name="hotel">Hotel &#x1F3E8;</string>
    <string name="museum">Museum &#9905;</string>
    <string name="park">Park &#127905;</string>
    <string name="zoo">Zoo &#128053;</string>
    <string name="house">House &#127968;</string>
    <string name="parking">Parking &#127359;</string>
    <string name="fireStation">Fire Station &#128658;</string>
    <string name="sea">Sea &#127754;</string>
    <string name="factory">Factory &#127981;</string>
    <string name="jail">Jail &#9878;</string>
    <string name="drugStore">Drugstore &#128138;</string>

    <string-array name="things">
        <item name="pen">@string/pen</item>
        <item name="pencil">@string/pencil</item>
        <item name="car">@string/car</item>
        <item name="key">@string/key</item>
        <item name="computer">@string/computer</item>
        <item name="phone">@string/phone</item>
        <item name="glasses">@string/glasses</item>
        <item name="wallet">@string/wallet</item>
        <item name="camera">@string/camera</item>
        <item name="coin">@string/coin</item>
        <item name="umbrella">@string/umbrella</item>
        <item name="mirror">@string/mirror</item>
        <item name="book">@string/book</item>
        <item name="lightBulb">@string/lightBulb</item>
    </string-array>

    <string name="pen">Pen</string>
    <string name="pencil">Pencil</string>
    <string name="car">Car</string>
    <string name="key">Key</string>
    <string name="computer">Computer</string>
    <string name="phone">Phone</string>
    <string name="glasses">Glasses</string>
    <string name="wallet">Wallet</string>
    <string name="camera">Camera</string>
    <string name="coin">Coin</string>
    <string name="umbrella">Umbrella</string>
    <string name="mirror">Mirror</string>
    <string name="book">Book</string>
    <string name="lightBulb">Light Bulb</string>


    <string-array name="foods">
        <item name="ice_cream">@string/ice_cream</item>
        <item name="cheese">@string/cheese</item>
        <item name="jam">@string/jam</item>
        <item name="salad">@string/salad</item>
        <item name="sandwich">@string/sandwich</item>
        <item name="bread">@string/bread</item>
        <item name="fish">@string/fish</item>
        <item name="rice">@string/rice</item>
        <item name="pizza">@string/pizza</item>
        <item name="milk">@string/milk</item>
        <item name="candy">@string/candy</item>
        <item name="cake">@string/cake</item>
        <item name="chocolate">@string/chocolate</item>
        <item name="water">@string/water</item>
        <item name="egg">@string/egg</item>
        <item name="butter">@string/butter</item>
        <item name="cream">@string/cream</item>
        <item name="kebab">@string/kebab</item>
        <item name="yogurt">@string/yogurt</item>
    </string-array>

    <string name="ice_cream">Ice-cream</string>
    <string name="cheese">Cheese</string>
    <string name="jam">Jam</string>
    <string name="salad">Salad</string>
    <string name="sandwich">Sandwich</string>
    <string name="bread">Bread</string>
    <string name="fish">Fish</string>
    <string name="rice">Rice</string>
    <string name="pizza">Pizza</string>
    <string name="milk">Milk</string>
    <string name="candy">Candy</string>
    <string name="cake">Cake</string>
    <string name="chocolate">Chocolate</string>
    <string name="water">Water</string>
    <string name="egg">Egg</string>
    <string name="butter">Butter</string>
    <string name="cream">Cream</string>
    <string name="kebab">Kebab</string>
    <string name="yogurt">Yogurt</string>

    <string-array name="cities">
        <item name="iran">@string/iran</item>
        <item name="usa">@string/usa</item>
        <item name="england">@string/england</item>
        <item name="france">@string/france</item>
        <item name="brazil">@string/brazil</item>
        <item name="spain">@string/spain</item>
        <item name="argentina">@string/argentina</item>
        <item name="russia">@string/russia</item>
        <item name="australia">@string/australia</item>
        <item name="canada">@string/canada</item>
        <item name="china">c@string/china</item>
        <item name="germany">@string/germany</item>
        <item name="india">@string/india</item>
        <item name="italy">@string/italy</item>
        <item name="japan">@string/japan</item>
        <item name="south_korea">@string/south_korea</item>
        <item name="netherlands">@string/netherlands</item>
        <item name="qatar">@string/qatar</item>
        <item name="portugal">@string/portugal</item>
        <item name="tehran">@string/tehran</item>
        <item name="washington">@string/washington</item>
        <item name="london">@string/london</item>
        <item name="paris">@string/paris</item>
        <item name="madrid">@string/madrid</item>
        <item name="moscow">@string/moscow</item>
        <item name="rome">@string/rome</item>
        <item name="berlin">@string/berlin</item>
        <item name="dubai">@string/dubai</item>
        <item name="newYork">@string/newYork</item>
        <item name="manchester">@string/manchester</item>
    </string-array>

    <string name="iran">Iran</string>
    <string name="usa">USA</string>
    <string name="england">England</string>
    <string name="france">France</string>
    <string name="brazil">Brazil</string>
    <string name="spain">Spain</string>
    <string name="argentina">Argentina</string>
    <string name="russia">Russia</string>
    <string name="australia">Australia</string>
    <string name="canada">Canada</string>
    <string name="china">China</string>
    <string name="germany">Germany</string>
    <string name="india">India</string>
    <string name="italy">Italy</string>
    <string name="japan">Japan</string>
    <string name="south_korea">South-Korea</string>
    <string name="netherlands">Netherlands</string>
    <string name="qatar">Qatar</string>
    <string name="portugal">Portugal</string>
    <string name="tehran">Tehran</string>
    <string name="washington">Washington</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="madrid">Madrid</string>
    <string name="moscow">Moscow</string>
    <string name="rome">Rome</string>
    <string name="berlin">Berlin</string>
    <string name="dubai">Dubai</string>
    <string name="newYork">New York</string>
    <string name="manchester">Manchester</string>

</resources>